2008-07-31 [colin]	0.24.4cvs8

	* src/maildir_gtk.c
		Fix warning

2008-07-30 [colin]	0.24.4cvs7

	* src/maildir_gtk.c
	* src/plugin.c
		Move the folderview popup menu to GtkUIManager

2008-07-29 [colin]	0.24.4cvs6

	* src/maildir.c
	* src/maildir_gtk.c
		Switch the main menu to GtkUIManager

2008-02-12 [wwp]	0.24.4cvs5

	* configure.ac
	* src/maildir_gtk.c
		Updated to match folder_sel API changes.

2007-08-27 [colin]	0.24.4cvs4

	* src/maildir_gtk.c
		Fix loss of subfolders properties when renaming folder

2007-07-11 [colin]	0.24.4cvs3

	* src/plugin.c
		Specify license better (GPL2+)

2007-06-21 [colin]	0.24.4cvs2

	* src/plugin.c
		Update plugin API

2007-05-05 [wwp]	0.24.4cvs1

	* src/maildir.c
		Fix "faild" typos everywhere and capitalization of
		some g_warnings.

2007-01-09 [paul]	0.24.4

	0.24.4 released

2006-12-27 [paul]	0.24.3cvs3

	* src/maildir_gtk.c
		Add Copy folder in the folder's contextual
		menu

2006-12-26 [colin]	0.24.3cvs2

	* src/maildir_gtk.c
	* src/plugin.c
		Follow 2.6.1cvs75 API change

2006-12-15 [ticho]	0.24.3cvs1

	* configure.ac
	* src/plugin.c
		Use check_plugin_version() for version check.

2006-12-04 [paul]	0.24.3

	0.24.3 released

2006-11-28 [paul]	0.24.2cvs6

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	0.24.2cvs5

	* debian/README.Debian
	* src/maildir_gtk.c
	* src/plugin.c
		renaming

2006-11-17 [hoa]	0.24.2cvs4

	* src/maildir.c
                fixed a double free (thanks to Jindrich Makovicka)

2006-11-17 [paul]	0.24.2cvs3

	* src/maildir.c
		better fix for bug 1058: get rid of ref count
		Patch by Hoa

2006-11-14 [colin]	0.24.2cvs2

	* src/maildir.c
		Don't keep databases open. Fixes
		bug 1059, 'maildir++ cannot handle 
		more than 249 folders'

2006-11-07 [paul]	0.24.2cvs1

	* ChangeLog
	* configure.ac
	* debian/README.Debian
	* debian/changelog
	* debian/control
	* debian/copyright
	* debian/rules
	* doc/README.xml